@@ -1,6 +1,6 @@
 Package: geneXtendeR
 Type: Package
-Version: 1.0.2
+Version: 1.0.3
 Title: Optimal Gene Extensions From Histone Modification ChIP-seq Data
 Description: geneXtendeR is designed to optimally annotate a histone modification ChIP-seq peak input file with functionally important genomic features (e.g., genes associated with peaks) based on optimization calculations.  geneXtendeR optimally extends the boundaries of every gene in a
     genome by some genomic distance (in DNA base pairs) for the purpose of flexibly
@@ -22,7 +22,7 @@ Maintainer: Bohdan Khomtchouk <khomtchoukmed@gmail.com>
 URL: https://github.com/Bohdan-Khomtchouk/geneXtendeR
 BugReports: https://github.com/Bohdan-Khomtchouk/geneXtendeR/issues
 Depends: rtracklayer, R (>= 3.3.1)
-Imports: AnnotationDbi, data.table, dplyr, GO.db, graphics, utils, org.Ag.eg.db, org.Bt.eg.db, org.Ce.eg.db, org.Cf.eg.db, org.Dm.eg.db, org.Dr.eg.db, org.Gg.eg.db, org.Hs.eg.db, org.Mm.eg.db, org.Mmu.eg.db, org.Pt.eg.db, org.Rn.eg.db, org.Sc.sgd.db, org.Ss.eg.db, org.Xl.eg.db
+Imports: AnnotationDbi, data.table, dplyr, GO.db, graphics, networkD3, utils, org.Ag.eg.db, org.Bt.eg.db, org.Ce.eg.db, org.Cf.eg.db, org.Dm.eg.db, org.Dr.eg.db, org.Gg.eg.db, org.Hs.eg.db, org.Mm.eg.db, org.Mmu.eg.db, org.Pt.eg.db, org.Rn.eg.db, org.Sc.sgd.db, org.Ss.eg.db, org.Xl.eg.db
 Suggests: BiocStyle, knitr, rmarkdown
 VignetteBuilder: knitr
 License: GPL (>= 3)
