@@ -6,6 +6,7 @@ export(cumlinePlot)
 export(diffGO)
 export(distinct)
 export(linePlot)
+export(makeNetwork)
 export(peaksInput)
 import(data.table)
 import(graphics)
