@@ -1,0 +1,32 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/makeNetwork.r
+\name{makeNetwork}
+\alias{makeNetwork}
+\title{Makes gene-GO networks}
+\usage{
+makeNetwork(organism, start, end, GOcategory, GOspecies)
+}
+\arguments{
+\item{organism}{Object name assigned from readGFF() command.}
+
+\item{start}{Lower bound of upstream extension.}
+
+\item{end}{Upper bound of upstream extension.}
+
+\item{GOcategory}{Either BP, CC, or MF.}
+
+\item{GOspecies}{Either org.Ag.eg.db (mosquito), org.Bt.eg.db (bovine), org.Ce.eg.db (worm), org.Cf.eg.db (canine), org.Dm.eg.db (fly), org.Dr.eg.db (zebrafish), org.Gg.eg.db (chicken), org.Hs.eg.db (human), org.Mm.eg.db (mouse), org.Mmu.eg.db (rhesus), org.Pt.eg.db (chimpanzee), org.Rn.eg.db (rat), org.Sc.sgd.db (yeast), org.Ss.eg.db (pig), or org.Xl.eg.db (frog).}
+}
+\value{
+An interactive network of gene symbols and respective gene ontology terms for either a BP, CC, or MF category.
+}
+\description{
+Creates dynamic and interactive networks of genes linked to their respective gene ontology terms for each category (biological process (BP), cellular compartment (CC), molecular function (MF)) of genes-under-peaks that are unique between two different upstream extension levels.
+}
+\examples{
+rat <- readGFF("ftp://ftp.ensembl.org/pub/release-84/gtf/rattus_norvegicus/Rattus_norvegicus.Rnor_6.0.84.gtf.gz")
+fpath <- system.file("extdata", "somepeaksfile.txt", package="geneXtendeR")
+peaksInput(fpath)
+makeNetwork(rat, 0, 500, BP, org.Rn.eg.db)
+
+}
